build: bump main dev dependencies

--- a/packages/demo/src/styles.scss
+++ b/packages/demo/src/styles.scss
@@ -1,2 +1,2 @@
 @import "../../angular-toaster/src/lib/toaster.scss";
-@import '~bootstrap/scss/bootstrap.scss';
+@import "bootstrap/scss/bootstrap";
